# nautobot-lab

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  pb.yaml  pb_nautobot_install.yml  pyproject.toml  requirements.txt  supervisord.conf  tasks.py  tzseeds.txt
.github/workflows/: auto-update.yml  ci.yml  release.yml
deploy/: docker.sh
templates/: default_user.py  loaddata.sh  local_requirements.txt  nautobot_backup.dump  nautobot_config.py  pg_hba.conf  redis.conf  requirements.txt  superuser.sh  supervisord.conf  uwsgi.ini
templates/tests/: conftest.py  tests.py
