[tool.poetry]
name = "nautobot-lab"
version = "0.1.0"
description = ""
authors = ["James Williams <james.williams@networktocode.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yamllint = "^1.31.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
